--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: desafio_login
+name: todo_app
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -28,15 +28,16 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  flutter:
+    sdk: flutter
   logging: ^1.0.2
   sqflite: ^2.0.0+3
   sqflite_common_ffi: ^2.1.0
   shared_preferences: ^2.0.6
   flutter_local_notifications: ^9.5.0
   intl: ^0.17.0
-  flutter:
-    sdk: flutter
   flutter_datetime_picker: ^1.5.1
+  multiselect_formfield: ^0.1.5
 
 
   # The following adds the Cupertino Icons font to your application.
